Squash merge branch gradle-9 into 18-release